--- a/local/html/index.html
+++ b/local/html/index.html
@@ -12,7 +12,8 @@
 <body>
     <div id="pox">你好呀今天真冷你好嗨我是123你在哪里</div>
 	<div id="box">
-		吾问无为谓付费
+		吾问无为谓付费个体巨孚达发奖金附加费就
+		哈哈哈哈
 	</div>
 </body>
 <script>
