--- a/local/html/index.html
+++ b/local/html/index.html
@@ -13,7 +13,7 @@
     <div id="pox">你好呀今天真冷你好嗨我是123你在哪里</div>
 	<div id="box">
 		吾问无为谓付费个体巨孚达发奖金附加费就
-		哈哈哈哈
+		哈哈哈哈bbn
 	</div>
 </body>
 <script>
